# clean-archi

./: .gitignore  README.md  pyproject.toml
app/: config.py
app/entities/: item.py
app/fastapi_app/: main.py
app/fastapi_app/routers/: items.py
app/flask_app/: main.py
app/flask_app/blueprints/: items.py
app/interfaces/: repository.py
app/repository/: dependencies.py
app/repository/models/: base.py  item.py
app/repository/mongodb/: client.py  items.py
app/repository/sql/: items.py  session.py
app/use_cases/: items.py
tests/: conftest.py  docker-compose.yaml  fake_repository.py
tests/api/: test_items.py
tests/api/fastapi/: conftest.py  test_items.py
tests/api/flask/: conftest.py  test_items.py
tests/crud/: test_items.py
tests/repository/mongodb/: conftest.py  test_items.py
tests/repository/sql/: conftest.py  test_items.py
