[tool.poetry]
name = "clean-archi"
version = "0.1.0"
description = ""
authors = ["Julien Pillaud <julien.pillaud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
pydantic-settings = "^2.0.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.18"
httpx = "^0.24.1"
pymongo = "^4.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
ruff = "^0.0.277"
isort = "^5.12.0"
pylint = "^2.17.4"
mypy = "^1.4.1"

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # pylint
    "S",  # bandit
    "RUF",
]

[tool.ruff.per-file-ignores]
"test*.py" = ["S101"]  # Use of `assert` detected

[tool.mypy]
strict = true
exclude = [
    "venv",
]
plugins = [
    "pydantic.mypy",
]

[tool.pytest.ini_options]
markers = [
    "entity",
]
